Freedom Sanbox Ant Deploy/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>ActionPlanActivatedDate__c</fullName>
        <label>Action Plan Activated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActionPlanGenerationDate__c</fullName>
        <label>Action Plan Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ActionPlanSharingDate__c</fullName>
        <label>Action Plan Sharing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Activity_No__c</fullName>
        <label>Activity No</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Automated_Flows_Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Meeting Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <picklist>
            <controllingField>Stage1__c</controllingField>
            <picklistValues>
                <fullName>Major Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated Account Statement Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhoc/periodic requirement from the internal team for analysis purpose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual client meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement-Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Agreement-Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason of Leaving</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospecting- Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educating Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement- Sent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement-Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment-Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Collection- Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Over Stretching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Creation-Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client -Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Collection - Follow Up</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DataCollectionDate__c</fullName>
        <label>Data Collection Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Collection_Approved_Status__c</fullName>
        <label>Data Collection Approved Status</label>
        <picklist>
            <picklistValues>
                <fullName>Accept</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reject</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Entity_Intereseted_in_FP_Status__c</fullName>
        <label>Entity Interested in FP Status</label>
        <picklist>
            <picklistValues>
                <fullName>Converted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interested in FP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Interested in FP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Category__c</fullName>
        <label>Event Category</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Event_Place__c</fullName>
        <label>Meeting Place</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Event_Status__c</fullName>
        <label>Event Status</label>
        <picklist>
            <picklistValues>
                <fullName>Planned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExecutionTrackerOpenedDate__c</fullName>
        <label>Execution Tracker Opened Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExpectedFinancialPlanGenerationDate__c</fullName>
        <label>Expected Financial Plan Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinancialPlanCompletionDate__c</fullName>
        <label>Financial Plan Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FinancialPlanGenerationDate__c</fullName>
        <label>Financial Plan Generation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>From_Time__c</fullName>
        <inlineHelpText>Please fill the from time in this format  &quot;11:00 &quot;</inlineHelpText>
        <label>From Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_Once__c</fullName>
        <description>Logedin Once atleast</description>
        <label>Login Once</label>
        <picklist>
            <picklistValues>
                <fullName>YES</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Marketing_Owner__c</fullName>
        <label>Marketing Owner</label>
        <picklist>
            <picklistValues>
                <fullName>Ashwin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hemal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sumeet Vaid</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Meeting_Start_Date__c</fullName>
        <label>Meeting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Meeting__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Meeting #</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MemberFinancialPlanPresentationDate__c</fullName>
        <label>Member Financial Plan Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Parent_Activity_ID_Platform_User__c</fullName>
        <label>Parent Activity ID Platform User</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PartnerFinancialPlanPresentationDate__c</fullName>
        <label>Partner Financial Plan Presentation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Plan_Presentation_Completion_Status__c</fullName>
        <label>Plan Presentation Completion Status</label>
        <picklist>
            <picklistValues>
                <fullName>Rework Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rework Not Required</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PortalCreatedById__c</fullName>
        <label>PortalCreatedById</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Portal_Id__c</fullName>
        <label>Portal_Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seq_Day__c</fullName>
        <inlineHelpText>Enter the number of days that the task takes to complete</inlineHelpText>
        <label>Seq Day</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage1__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will-Join-Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Reviewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>StageRemoved</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will-Join-Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan-Reviewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Past Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject_Category__c</fullName>
        <label>Subject Category</label>
        <picklist>
            <picklistValues>
                <fullName>Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Next Steps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>To_Time__c</fullName>
        <inlineHelpText>Please fill the To time in this format  &quot;22:00 &quot;</inlineHelpText>
        <label>To Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WelcomeCallDone__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Call Done</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
</CustomObject>